--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar.Fullscreen">
+        android:theme="@style/Theme.FixedSize">
         <activity android:name=".SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
